tests/baselines/reference/readonlyReadonly.errors.txt
tests/cases/conformance/classes/constructorDeclarations/constructorParameters/readonlyReadonly.ts(2,14): error TS1030: 'readonly' modifier already seen.
tests/cases/conformance/classes/constructorDeclarations/constructorParameters/readonlyReadonly.ts(3,26): error TS1030: 'readonly' modifier already seen.


==== tests/cases/conformance/classes/constructorDeclarations/constructorParameters/readonlyReadonly.ts (2 errors) ====
    class C {
        readonly readonly x: number;
                 ~~~~~~~~
!!! error TS1030: 'readonly' modifier already seen.
        constructor(readonly readonly y: number) {}
                             ~~~~~~~~
!!! error TS1030: 'readonly' modifier already seen.
    }